tests/neg-custom-args/fatal-warnings/i9266.check
-- Error: tests/neg-custom-args/fatal-warnings/i9266.scala:3:22 --------------------------------------------------------
3 |def test = { implicit x: Int => x + x } // error
  |                      ^
  |                      This syntax is no longer supported; parameter needs to be enclosed in (...)
  |                      This construct can be rewritten automatically under -rewrite -source future-migration.
